Hooked in jwt token authentication and established initial views.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,10 @@ djangorestframework = "*"
 whitenoise = "*"
 gunicorn = "*"
 django-heroku = "*"
+"psycopg2" = "*"
+graphviz = "*"
+djangorestframework-jwt = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 coverage = "*"
