Implement absolute paths

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,10 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "NODE_PATH=src/ react-scripts start",
+    "build": "NODE_PATH=src/ react-scripts build",
+    "test": "NODE_PATH=src/ react-scripts test",
+    "eject": "NODE_PATH=src/ react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
