--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -5,13 +5,16 @@ services:
     image: postgres
     volumes:
       - gsn-data:/var/lib/postgresql/data/
-  web:
-    build: .
-    entrypoint: "/code/docker-entrypoint.sh"
+  gsn_web:
+    build: 
+      context: .
+      dockerfile: Dockerfile-django
     volumes:
       - .:/code
+    expose:
+      - "80"
     ports:
-      - 8000:8000
+      - 80:80
     environment:
       - SECRET_KEY=developerkey
     depends_on:
