--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - .:/code
       ## Uncomment the following during production.
-      ## - /etc/letsencrypt/:/etc/letsencrypt
+      ## - /etc/letsencrypt/:/etc/letsencrypt/
     expose:
       - "80"
     ports:
