--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - .:/code
       ## Uncomment the following during production.
       - /etc/letsencrypt/:/etc/letsencrypt/
+      - /etc/ssl/certs/ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt
     expose:
       - "80"
     ports:
