--- a/api/django-service-envoy.yaml
+++ b/api/django-service-envoy.yaml
@@ -11,6 +11,7 @@ static_resources:
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
+        config:
           stat_prefix: ingress_http
           codec_type: AUTO
           route_config:
@@ -31,6 +32,7 @@ static_resources:
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
+        config:
           stat_prefix: ingress_http
           codec_type: AUTO
           route_config:
