Updated docker-compose to expose port 443. If this works... I'll feel dumb.

--- a/api/django-service-envoy.yaml
+++ b/api/django-service-envoy.yaml
@@ -22,7 +22,7 @@ static_resources:
               - match:
                   prefix: ""
                 redirect:
-                  path_redirect: ""
+                  port_redirect: 443
                   https_redirect: true
           http_filters:
           - name: envoy.router
