--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
     "@storybook/react": "^4.1.13",
     "babel-eslint": "^9.0.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.1.0",
     "eslint-config-react-app": "^3.0.7",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.16.0",
@@ -29,7 +28,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-watch": "^4.0.2",
-    "prettier-eslint-cli": "^4.7.1",
     "react-testing-library": "^5.9.0"
   },
   "scripts": {
@@ -38,8 +36,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9001 -c .storybook",
-    "lint": "eslint 'src/**/*.{js,jsx}' --fix",
-    "format": "prettier --write 'src/**/*.{js,jsx,css,scss}'"
+    "lint": "eslint 'src/**/*.{js,jsx}' --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
