--- a/api/Pipfile
+++ b/api/Pipfile
@@ -13,6 +13,7 @@ djangorestframework-jwt = "*"
 httpie = "*"
 django-cors-headers = "*"
 djangorestframework-camel-case2 = "*"
+hashlib = "*"
 
 [dev-packages]
 coverage = "*"
