added NumPy and Pandas to Pipfile to assist with csv parsing.

--- a/api/Pipfile
+++ b/api/Pipfile
@@ -13,6 +13,8 @@ djangorestframework-jwt = "*"
 httpie = "*"
 django-cors-headers = "*"
 djangorestframework-camel-case2 = "*"
+pandas = "*"
+numpy = "*"
 
 [dev-packages]
 coverage = "*"
