--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -3,6 +3,8 @@ version: '2'
 services:
   db:
     image: postgres
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
     volumes:
       - gsn-data:/var/lib/postgresql/data/
   gsn_web:
